--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
     buildToolsVersion "29.0.3"
 
     defaultConfig {
-        applicationId "com.yourstar.gallery"
+        applicationId "com.yourstar.pagergallery"
         minSdkVersion 16
         targetSdkVersion 29
         versionCode 1
@@ -50,4 +50,5 @@ dependencies {
     implementation 'com.github.chrisbanes.photoview:library:1.2.4'
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.0-alpha02'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.0-alpha02'
+    implementation 'androidx.viewpager2:viewpager2:1.0.0'
 }
