--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.yourstar.gallery">
+    package="com.yourstar.pagergallery">
 
     <uses-permission android:name="android.permission.INTERNET"></uses-permission>
     <application
@@ -9,8 +9,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        android:theme="@style/Theme.AppCompat.Light.DarkActionBar">
+        <activity android:name="com.yourstar.pagergallery.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
